# airlock

./: RELEASE_NOTES.md  app.vue  matrix-theme.json  package-lock.json  package.json
.github/workflows/: release.yml
components/: HostSidebar.vue  SettingsDialog.vue  SidebarTreeItem.vue  SplitPaneLayout.vue  Terminal.vue
components/ui/context-menu/: ContextMenuContent.vue  ContextMenuItem.vue  ContextMenuSeparator.vue  ContextMenuTrigger.vue  index.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  ssh_session.rs
stores/: hosts.ts  settings.ts  tabs.ts
utils/: backup.ts  security.ts  store-adapter.ts
